expand last paragraph

--- a/latex/types2025/macros.tex
+++ b/latex/types2025/macros.tex
@@ -94,7 +94,7 @@
 
 %% Types
 \newcommand{\IPower}[1]{\mathcal{P}{#1}}
-\newcommand{\IFun}[2]{{#2}^{#1}}
+\newcommand{\IFun}[2]{{{#1}\to{#2}}}
 
 % INTERNAL PCA
 
