--- a/latex/types2025/references.bib
+++ b/latex/types2025/references.bib
@@ -43,7 +43,8 @@
 @inproceedings{cohenInductiveContinuityBrouwer2023,
   title = {Inductive {{Continuity}} via {{Brouwer Trees}}},
   booktitle = {48th {{International Symposium}} on {{Mathematical Foundations}} of {{Computer Science}} ({{MFCS}} 2023)},
-  author = {Cohen, Liron and family=Rocha Paiva, given=Bruno, prefix=da, useprefix=true and Rahli, Vincent and Tosun, Ayberk},
+  author = {Cohen, Liron and da Rocha Paiva, Bruno and Rahli, Vincent and Tosun, Ayberk},
+  options = {useprefix=true},
   date = {2023},
   series = {Leibniz {{International Proceedings}} in {{Informatics}} ({{LIPIcs}})},
   volume = {272},
@@ -123,7 +124,8 @@
 
 @inproceedings{forsterMarkovsPrinciplesConstructive,
   title = {Markov’s {{Principles}} in {{Constructive Type Theory}}},
-  author = {Forster, Yannick and Kirst, Dominik and family=Rocha Paiva, given=Bruno, prefix=da, useprefix=true and Rahli, Vincent},
+  author = {Forster, Yannick and Kirst, Dominik and da Rocha Paiva, Bruno and Rahli, Vincent},
+  options = {useprefix=true},
   location = {Valencia, Spain}
 }
 
@@ -183,14 +185,14 @@
 
 @article{vanoostenSemanticalProofJonghs1991,
   title = {A Semantical Proof of {{De Jongh}}'s Theorem},
-  author = {Van Oosten, Jaap},
-  date = {1991-03},
+  author = {van Oosten, Jaap},
+  options = {useprefix=true},
+  date = {1991-03-01},
   journaltitle = {Archive for Mathematical Logic},
-  shortjournal = {Arch Math Logic},
+  shortjournal = {Archive for Mathematical Logic},
   volume = {31},
   number = {2},
   pages = {105--114},
-  issn = {0933-5846, 1432-0665},
-  doi = {10.1007/BF01387763},
-  langid = {english}
+  issn = {1432-0665},
+  doi = {10.1007/BF01387763}
 }
